--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/font": "7.4.47",
     "@supabase/supabase-js": "^2.46.2",
+    "axios": "^1.9.0",
     "core-js": "^3.37.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
