--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "@mdi/font": "7.4.47",
     "@supabase/supabase-js": "^2.46.2",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "core-js": "^3.37.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vuetify": "^3.6.11"
